@@ -1,23 +1,3 @@
-## Table of contents
-* [Report Portal Installation ](#ReportPortal)
-* [Description](#Descriprion)
-* [Supported OS](#Supported-OS)
-* [Required Services](#Required-Services)
-    * [PostgreSQL](#PostgreSQL)
-    * [RabbitMQ](#RabbitMQ)
-    * [ElasticSearch](#ElasticSearch)
-    * [Traefik](#Traefik)
-* [ReportPortal Services](#ReportPortal-Services)
-    * [Preparation](#Preparation)
-    * [Repositories](#Repositories)
-    * [Analyzer](#Analyzer)
-    * [Migration](#Migration)
-    * [Index](#Index)
-    * [API](#API)
-    * [UAT](#UAT)
-    * [UI](#UI)
-
-
 # ReportPortal Linux installation
 [![Join Slack chat!](https://reportportal-slack-auto.herokuapp.com/badge.svg)](https://reportportal-slack-auto.herokuapp.com)
 [![stackoverflow](https://img.shields.io/badge/reportportal-stackoverflow-orange.svg?style=flat)](http://stackoverflow.com/questions/tagged/reportportal)
@@ -40,16 +20,35 @@ ReportPortal is a great addition to the Continuous Integration and Continuous Te
 ![RHEL](https://img.shields.io/badge/RHEL-8.x-red?style=flat-square)
 ![RHEL](https://img.shields.io/badge/RHEL-9.x-red?style=flat-square)
 
+## Table of contents
+* [Report Portal Installation ](#ReportPortal)
+* [Description](#Descriprion)
+* [Supported OS](#Supported-OS)
+* [Required Services](#Required-Services)
+    * [PostgreSQL](#PostgreSQL)
+    * [RabbitMQ](#RabbitMQ)
+    * [OpenSearch](#OpenSearch)
+    * [Traefik](#Traefik)
+    * [ReportPortal Services](#ReportPortal-Services)
+    * [Preparation](#Preparation)
+    * [Repositories](#Repositories)
+    * [Analyzer](#Analyzer)
+    * [Migration](#Migration)
+    * [Index](#Index)
+    * [API](#API)
+    * [UAT](#UAT)
+    * [UI](#UI)
 
 ## Required Services
-![PostgreSQL](https://img.shields.io/badge/PostgreSQL-12.6-blue?style=flat-square)
-![RabbitMQ](https://img.shields.io/badge/RabbitMQ-3.8.14-blue?style=flat-square)
-![ElasticSearch](https://img.shields.io/badge/ElasticSearch-7.10.1-blue?style=flat-square)
-![Traefik](https://img.shields.io/badge/Traefik-1.7.29-blue?style=flat-square)
+![PostgreSQL](https://img.shields.io/badge/PostgreSQL-17.2-blue?style=flat-square)
+![RabbitMQ](https://img.shields.io/badge/RabbitMQ-4.0.5-blue?style=flat-square)
+![OpenSearch](https://img.shields.io/badge/OpenSearch-2.18.0-blue?style=flat-square)
+![Traefik](https://img.shields.io/badge/Traefik-2.11.16-blue?style=flat-square)
+![Go](https://img.shields.io/badge/Go-22.6.1-blue?style=flat-square)
 
 ### PostgreSQL
 
-How to install PostgreSQL 17.2 on [Ubuntu](https://www.postgresql.org/download/linux/ubuntu/) LTS 20.04, 22.04, LTS 24.04 / [Red Hat family](https://www.postgresql.org/download/linux/redhat/) (RHEL, AlmaLinux, etc).
+How to install PostgreSQL 16 or 17 on [Ubuntu](https://www.postgresql.org/download/linux/ubuntu/) LTS 20.04, 22.04, LTS 24.04 / [Red Hat family](https://www.postgresql.org/download/linux/redhat/) (RHEL, AlmaLinux, etc).
 
 1. After successful installation, you need to prepare the database for ReportPortal services `sudo su - postgres -c "psql"`
 
@@ -69,8 +68,8 @@ local   all             all                                     md5
 host    all             all             127.0.0.1/32            md5
 ```
 File location:
-* Ubuntu: `/etc/postgresql/17/main/pg_hba.conf`
-* RHEL: `/var/lib/pgsql/17/data/pg_hba.conf`
+* Ubuntu: `/etc/postgresql/<PSQL_VERSION>/main/pg_hba.conf`
+* RHEL: `/var/lib/pgsql/<PSQL_VERSION>/data/pg_hba.conf`
 
 3. After the changes above, restart the PostgreSQL service 
 ```bash
@@ -91,6 +90,8 @@ How to install RabbitMQ 4.0.5 on [Ubuntu](https://www.rabbitmq.com/docs/install-
 
 ```bash
 sudo rabbitmq-plugins enable rabbitmq_management
+sudo rabbitmq-plugins enable rabbitmq_shovel rabbitmq_shovel_management
+sudo rabbitmq-plugins enable rabbitmq_consistent_hash_exchange
 ```
 
 2. Check and provide ownership of RabbitMQ files to the RabbitMQ user:
@@ -117,6 +118,10 @@ sudo rabbitmqctl add_vhost analyzer
 sudo rabbitmqctl set_permissions -p analyzer <your_rpmquser> ".*" ".*" ".*"
 ```
 
+5. Restart rabbitmq server to deploy changes
+```bash
+sudo systemctl restart rabbitmq-server
+```
 To check RabbitMQ look forward <you_IP>:15672
 
 ![RabbitMQ](img/rabbitmq.gif)
@@ -152,14 +157,14 @@ curl -u '<your_opensearch_user>:<your_opensearch_password>' -XGET http://localho
 
 ### Option 2: ElasticSearch
 
-How to install ElasticSearch 8.17 on [Ubuntu](https://www.elastic.co/guide/en/elasticsearch/reference/current/deb.html) LTS 20.04, 22.04, 24.04 / [Red Hat family](https://www.elastic.co/guide/en/elasticsearch/reference/current/rpm.html) (RHEL, AlmaLinux, etc). Also you need to install `openjdk-11-jre-headless` and `openjdk-8-jdk`
+How to install ElasticSearch 8.17 on [Ubuntu](https://www.elastic.co/guide/en/OpenSearch/reference/current/deb.html) LTS 20.04, 22.04, 24.04 / [Red Hat family](https://www.elastic.co/guide/en/OpenSearch/reference/current/rpm.html) (RHEL, AlmaLinux, etc). Also you need to install `openjdk-11-jre-headless` and `openjdk-8-jdk`
 
 To check ElasticSearch use the `curl -X GET "localhost:9200/"`. The output will be:
 
 ```json
 {
     "name" : "reportportal",
-    "cluster_name" : "elasticsearch",
+    "cluster_name" : "ElasticSearch",
     "cluster_uuid" : "98xfWPnKQNSI1ql7q7y57w",
     "version" : {
         "number" : "7.10.1",
@@ -193,69 +198,76 @@ tar -xvf traefik_v2.11.16_linux_amd64.tar.gz
 
 3. Download ReportPortal Traefik configuration file
 ```bash
-curl -LO https://raw.githubusercontent.com/reportportal/linux-installation/master/data/traefik.yml
-curl -LO https://raw.githubusercontent.com/reportportal/linux-installation/master/data/dynamic_conf.yml
+wget -O /etc/traefik/traefik.yml https://raw.githubusercontent.com/reportportal/linux-installation/EPMRPP-66074/update-linux-guide/data/traefik.yml
+wget -O /etc/traefik/dynamic_conf.yml https://raw.githubusercontent.com/reportportal/linux-installation/master/data/dynamic_conf.yml
 ```
-
+4.  Create Service for traefik
 ```	
-sudo mkdir -p /etc/traefik
-	sudo chown $USER:$USER /etc/traefik
-	sudo nano /etc/traefik/traefik.yml
-		# Paste the traefik.yml content
-	sudo nano /etc/traefik/dynamic_conf.yml
-		# Paste the dynamic_conf.yml content
+sudo tee /etc/systemd/system/traefik.service <<EOF
+[Unit]
+Description=Traefik
+Documentation=https://doc.traefik.io/traefik/
+After=network.target
 
-	sudo tee /etc/systemd/system/traefik.service > /dev/null <<EOF
-	[Unit]
-	Description=Traefik Service
-	After=network.target
+[Service]
+ExecStart=/usr/local/bin/traefik --configFile=/etc/traefik/traefik.yml
+Restart=always
+User=root
 
-	[Service]
-	Type=simple
-	ExecStart=/usr/local/bin/traefik --configFile=/etc/traefik/traefik.yml
-	Restart=always
-
-	[Install]
-	WantedBy=multi-user.target
-	EOF
+[Install]
+WantedBy=multi-user.target
+EOF
 ```
 
-4. Start Traefik
+5. Start Traefik
 
 ```bash
 sudo systemctl daemon-reload
 sudo systemctl enable traefik
 sudo systemctl start traefik
 ```
-5. Check Traefik status
+6. Check Traefik status
 
 ```
 sudo systemctl status traefik
 ```
 
+### Install and configure Go
+```bash
+wget https://go.dev/dl/go1.22.6.linux-amd64.tar.gz
+sudo tar -C /usr/local -xzf go1.22.6.linux-amd64.tar.gz
+export PATH=$PATH:/usr/local/go/bin
+```
 ## ReportPortal Services
 
-![Analyzer](https://img.shields.io/badge/Analyzer-5.3.5-9cf?style=flat-square)
-![UI](https://img.shields.io/badge/UI-5.3.5-9cf?style=flat-square)
-![API](https://img.shields.io/badge/API-5.3.5-9cf?style=flat-square)
-![Migration](https://img.shields.io/badge/Migration-5.3.5-9cf?style=flat-square)
-![Index](https://img.shields.io/badge/Index-5.0.10-9cf?style=flat-square)
-![UAT](https://img.shields.io/badge/UAT-5.3.5-9cf?style=flat-square)
+![Analyzer](https://img.shields.io/badge/Analyzer-5.13.1-9cf?style=flat-square)
+![UI](https://img.shields.io/badge/UI-5.12.13-9cf?style=flat-square)
+![API](https://img.shields.io/badge/API-5.13.2-9cf?style=flat-square)
+![Migration](https://img.shields.io/badge/Migration-5.13.0-9cf?style=flat-square)
+![Index](https://img.shields.io/badge/Index-5.13.0-9cf?style=flat-square)
+![UAT](https://img.shields.io/badge/UAT-5.13.0-9cf?style=flat-square)
+![Jobs](https://img.shields.io/badge/UAT-5.13.0-9cf?style=flat-square)
 
 ### Repositories
 
 [![Index](https://img.shields.io/github/downloads/reportportal/service-index/total?label=Index%40downloads&style=flat-square)](https://github.com/reportportal/service-index/releases/) 
 [![UI](https://img.shields.io/github/downloads/reportportal/service-ui/total?label=UI%40downloads&style=flat-square)](https://github.com/reportportal/service-ui/releases/)
-[![API](https://img.shields.io/maven-central/v/com.epam.reportportal/service-api?label=API%40maven-central&style=flat-square)](https://search.maven.org/artifact/com.epam.reportportal/service-api/5.3.5/jar)
+[![API](https://img.shields.io/maven-central/v/com.epam.reportportal/service-api?label=API%40maven-central&style=flat-square)](https://search.maven.org/artifact/com.epam.reportportal/service-api/5.13.0/jar)
 [![UAT](https://img.shields.io/maven-central/v/com.epam.reportportal/service-authorization?label=UAT%40maven-central&style=flat-square)](https://search.maven.org/artifact/com.epam.reportportal/service-authorization/5.3.5/jar)
 
 ### Preparation
 
-How to install Python 3.7, Python 3.7 DEV and Python 3.7 VENV on [Ubuntu](https://www.python.org/downloads/) LTS 18.04, 20.04 / [Red Hat family](https://www.python.org/downloads/) 6, 7, 8 (RHEL, CentOS, etc).
+How to install Python 3.11.11, Python 3.11.11 DEV and Python 3.11.11 VENV on [Ubuntu](https://www.python.org/downloads/) LTS 24.04 / [Red Hat family](https://www.python.org/downloads/) 6, 7, 8 (RHEL, AlmaLinux, etc).
 
-For example for Ubuntu 18.04 OS:
+For example for Ubuntu 24.04 OS:
+Create Env variables
 ```bash
-sudo apt install python3.7 python3.7-dev python3.7-venv -y
+PY_VERSION="3.11.11"
+PY_TARBALL="Python-${PY_VERSION}.tar.xz"
+```
+Get required python version
+```bash
+sudo wget "https://www.python.org/ftp/python/${PY_VERSION}/${PY_TARBALL}"
 ```
 
 Also you need to install `ZIP`, `GCC` and `software-properties-common` (for Ubuntu)
@@ -263,27 +275,53 @@ Also you need to install `ZIP`, `GCC` and `software-properties-common` (for Ubun
 ```bash
 sudo apt install zip software-properties-common gcc -y
 ```
+compile python
+```bash
+tar -xf "${PY_TARBALL}"
+cd "Python-${PY_VERSION}"
+./configure
+make -j"$(nproc)"
+sudo make altinstall
+```
  
 Add environment variables:
 
 ```bash
 MAVEN_REPO="https://repo1.maven.org/maven2/com/epam/reportportal"
 
-API_VERSION="5.3.5"
-UAT_VERSION="5.3.5"
-MIGRATIONS_VERSION="5.3.5"
-UI_VERSION="5.3.5"
-SERVICE_INDEX_VERSION="5.0.10"
-SERVICE_ANALYZER="5.3.5"
+API_VERSION="5.13.2"
+UAT_VERSION="5.13.0"
+MIGRATIONS_VERSION="5.13.0"
+UI_VERSION="5.12.13"
+SERVICE_INDEX_VERSION="5.13.0"
+SERVICE_ANALYZER="5.13.1"
+SERVICE_JOBS="5.13.0"
+SERVICE_INDEX="5.13.0"
 
-SERVICE_API_JAVA_OPTS="-Xms1024m -Xmx2048m"
-SERVICE_UAT_JAVA_OPTS="-Xms512m -Xmx512m"
+SERVICE_API_JAVA_OPTS="-Xmx1g -XX:+UseG1GC -XX:InitiatingHeapOccupancyPercent=70 -Djava.security.egd=file:/dev/./urandom"
+SERVICE_UAT_JAVA_OPTS="-Djava.security.egd=file:/dev/./urandom -XX:MinRAMPercentage=60.0 -XX:MaxRAMPercentage=90.0 --add-opens=java.base/java.lang=ALL-UNNAMED"
+SERVICE_JOBS_JAVA_OPTS="-Djava.security.egd=file:/dev/./urandom -XX:+UseG1GC -XX:+UseStringDeduplication -XX:G1ReservePercent=20 -XX:InitiatingHeapOccupancyPercent=60 -XX:MaxRAMPercentage=70.0 -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp"
+
+POSTGRES_DB="reportportal"
+RP_ENCRYPTION_KEY=<YourStrongEncryptionKey>
+RP_JOBS_BASEURL="http://localhost:8686"    
 
 RP_POSTGRES_USER=<your_rpdbuser>
 RP_POSTGRES_PASSWORD=<your_rpdbuser_password>
 RP_RABBITMQ_USER=<your_rpmquser>
 RP_RABBITMQ_PASSWORD=<your_rpmquser_password>
 
+RP_AMQP_HOST=<your_rabbitmq_host>
+RP_AMQP_PORT=your_rabbit_port>
+RP_AMQP_APIPORT=<your_rabbit_api_port>
+RP_AMQP_USER=<your_rabbit_user>
+RP_AMQP_PASS=<your_rabbit_pass>
+RP_AMQP_APIUSER=<your_rabbit_api_user>
+RP_AMQP_APIPASS=<yoyr_rabbit_api_pass>
+RP_AMQP_ANALYZER_VHOST=<your_analyzer_virtual_host>
+AMQP_URL="amqp://${RABBITMQ_DEFAULT_USER-rabbitmq}:${RABBITMQ_DEFAULT_PASS-rabbitmq}@${RP_AMQP_HOST}:${RP_AMQP_PORT}${RP_AMQP_ANALYZER_VHOST}"
+
+DATASTORE_TYPE="filesystem" 
 ```
 
 Create a working directory 
@@ -307,16 +345,17 @@ cd /opt/reportportal/service-auto-analyzer-${SERVICE_ANALYZER}
 2. Work with a virtual environment:
 ```bash
 # Create a virtual environment with any name (for example /vrpanalyzer)
-sudo python3.7 -m venv /vrpanalyzer
+sudo python3.11 -m venv /analyzer
 
 # Install python required libraries
-sudo /vrpanalyzer/bin/pip install --no-cache-dir -r requirements.txt
+sudo /analyzer/bin/pip install --upgrade pip
+sudo /analyzer/bin/pip install --no-cache-dir -r requirements.txt
 
 # Activate the virtual environment
 source /vrpanalyzer/bin/activate
 
 # Install stopwords package from the nltk library
-sudo /vrpanalyzer/bin/python3 -m nltk.downloader -d /usr/share/nltk_data stopwords
+sudo /analyzer/bin/python3.11 -m nltk.downloader -d /usr/share/nltk_data stopwords
 ```
 
 3. Start the uwsgi server, you can change properties, such as the worker's quantity for running the analyzer in several processes. 
@@ -324,7 +363,7 @@ sudo /vrpanalyzer/bin/python3 -m nltk.downloader -d /usr/share/nltk_data stopwor
 Set in ***app.ini*** your virtual environment specified above:
 
 ```bash
-virtualenv = vrpanalyzer
+virtualenv = analyzer
 ```
 
 Set in ***app.py*** RabbitMQ URL `amqp://user:password@localhost:5672`, binary store type `filesystem`, and directory name (for example `rpstorage`)
@@ -339,36 +378,63 @@ Set in ***app.py*** RabbitMQ URL `amqp://user:password@localhost:5672`, binary s
 Activate the virtual environment
 
 ```bash
-source /vrpanalyzer/bin/activate
+source /analyzer/bin/activate
 ```
 
 Install stopwords package from the nltk library
 
 ```bash
-sudo /vrpanalyzer/bin/python3.7 -m nltk.downloader -d /usr/share/nltk_data stopwords
+sudo /analyzer/bin/python3.11 -m nltk.downloader -d /usr/share/nltk_data stopwords
 ```
 
 Start Analyzer
 
 ```bash
-/vrpanalyzer/bin/uwsgi --ini app.ini > /dev/null 2>&1 &
+/analyzer/bin/uwsgi --ini app.ini > /dev/null 2>&1 &
+```
+for analyzer train consider the same steps, but using "analyzer-train" instead "analyzer", also you will require the following environment variables:
+```bash
+INSTANCE_TASK_TYPE: train
+UWSGI_WORKERS: 1
+```
+### Migration
+1. Prepare automatic database Authentication
+```bash
+PGPASS_FILE="$HOME/.pgpass"
+echo "Configuring automatic authentication in $PGPASS_FILE..."
+cat <<EOF > "$PGPASS_FILE"
+${POSTGRES_HOST}:${POSTGRES_PORT}:${RP_POSTGRES_DB}:${RP_POSTGRES_USER}:${POSTGRES_PASSWORD}
+EOF
+chmod 600 "$PGPASS_FILE"
 ```
 
-### Migration
-
-1. Download service
+2. Download service
 
 ```bash
 cd /opt/reportportal/ && \
 wget -c -N -O migrations.zip https://github.com/reportportal/migrations/archive/${MIGRATIONS_VERSION}.zip && unzip migrations.zip && mv migrations-${MIGRATIONS_VERSION} migrations && rm -f migrations.zip
 ```
 
-2. Run service
+3. Run service
 
-You need to execute all `up` scripts to prepare your database for ReportPortal services:
+You need to execute all `up` scripts to prepare your database for ReportPortal services, run the following script in orther to install it:
 
 ```bash
-PGPASSWORD=$RP_POSTGRES_PASSWORD psql -U $RP_POSTGRES_USER -d reportportal -a -f migrations/migrations/0_extensions.up.sql -f migrations/migrations/1_initialize_schema.up.sql -f migrations/migrations/2_initialize_quartz_schema.up.sql -f migrations/migrations/3_default_data.up.sql -f migrations/migrations/4_size_limitations.up.sql -f migrations/migrations/5_test_case_id_type.up.sql -f migrations/migrations/6_retries_handling.up.sql -f migrations/migrations/7_auth_integration.up.sql -f migrations/migrations/8_sender_case_enabled_field.up.sql -f migrations/migrations/9_analyzer_params.up.sql -f migrations/migrations/10_attachment_size.up.sql -f migrations/migrations/11_password_encoding.up.sql -f migrations/migrations/12_remove_ticket_duplicates.up.sql -f migrations/migrations/13_add_allocated_storage_per_project.up.sql -f migrations/migrations/14_test_case_id_size_increase.up.sql -f migrations/migrations/15_statistics_decreasing.up.sql -f migrations/migrations/16_remove_unused_indexes.up.sql -f migrations/migrations/17_status_enum_extension.up.sql -f migrations/migrations/18_job_attributes.up.sql -f migrations/migrations/19_retries_handling_extension.up.sql -f migrations/migrations/20_deep_merge_statistics_handling.up.sql -f migrations/migrations/21_deep_merge_retries_fix.up.sql -f migrations/migrations/22_deep_merge_nested_steps_fix.up.sql -f migrations/migrations/23_rerun_item_statistics_fix.up.sql -f migrations/migrations/24_widget_views_cleanup.up.sql -f migrations/migrations/25_deep_merge_nested_steps_path_fix.up.sql 2>&1 &
+for FILE in $(ls migrations/migrations/*.up.sql | sort -V); do
+  echo "Applying migration: $FILE"
+  psql -h "$POSTGRES_HOST" \
+       -p "$POSTGRES_PORT" \
+       -U "$RP_POSTGRES_USER" \
+       -d "$RP_POSTGRES_DB" \
+       -a -f "$FILE"
+done
+```
+
+4. Clean workspace
+
+```bash
+rm -f "$PGPASS_FILE"
+rm -rf ./migrations/
 ```
 
 ### Index
@@ -399,7 +465,7 @@ curl -L $MAVEN_REPO/service-api/$API_VERSION/service-api-$API_VERSION-exec.jar -
 2. Run API service
 
 ```bash
-sudo RP_AMQP_HOST=localhost RP_AMQP_APIUSER=$RP_RABBITMQ_USER RP_AMQP_APIPASS=$RP_RABBITMQ_PASSWORD RP_AMQP_USER=$RP_RABBITMQ_USER RP_AMQP_PASS=$RP_RABBITMQ_PASSWORD RP_DB_USER=$RP_POSTGRES_USER RP_DB_PASS=$RP_POSTGRES_PASSWORD RP_DB_HOST=localhost java $SERVICE_API_JAVA_OPTS -jar service-api.jar 2>&1 &
+sudo RP_AMQP_HOST=$RP_AMQP_HOST RP_AMQP_APIUSER=$RP_RABBITMQ_USER RP_AMQP_APIPASS=$RP_RABBITMQ_PASSWORD RP_AMQP_USER=$RP_RABBITMQ_USER RP_AMQP_PASS=$RP_RABBITMQ_PASSWORD RP_DB_USER=$RP_POSTGRES_USER RP_DB_PASS=$RP_POSTGRES_PASSWORD RP_DB_HOST=$RP_DB_HOST java $SERVICE_API_JAVA_OPTS -jar service-api.jar 2>&1 &
 ```
 
 ### UAT
@@ -414,7 +480,21 @@ curl -L $MAVEN_REPO/service-authorization/$UAT_VERSION/service-authorization-$UA
 2. Run service
 
 ```bash
-RP_DB_HOST=localhost RP_DB_USER=$RP_POSTGRES_USER RP_DB_PASS=$RP_POSTGRES_PASSWORD java $SERVICE_UAT_JAVA_OPTS -jar service-uat.jar 2>&1 &
+RP_DB_HOST=$RP_DB_HOST RP_DB_USER=$RP_POSTGRES_USER RP_DB_PASS=$RP_POSTGRES_PASSWORD java $SERVICE_UAT_JAVA_OPTS -jar service-uat.jar 2>&1 &
+```
+### JOBS
+
+1. Download service
+
+```bash
+cd /opt/reportportal/ && \
+curl -L $MAVEN_REPO/service-jobs/$SERVICE_JOBS/service-jobs-$SERVICE_JOBS-exec.jar -o service-uat.jar
+```
+
+2. Run service
+
+```bash
+RP_DB_HOST=$RP_DB_HOST RP_DB_USER=$RP_POSTGRES_USER RP_DB_PASS=$RP_POSTGRES_PASSWORD java $SERVICE_JOBS_JAVA_OPTS -jar service-uat.jar 2>&1 &
 ```
 
 ### UI
@@ -431,7 +511,7 @@ mkdir -p /opt/reportportal/ui && cd /opt/reportportal/
 curl -L https://github.com/reportportal/service-ui/releases/download/$UI_VERSION/service-ui_linux_amd64 -o service-ui && \
 mv service-ui ui/ && \
 chmod -R +x ui/* && \
-curl -LO https://github.com/reportportal/service-ui/releases/download/5.3.5/ui.tar.gz && \
+curl -LO https://github.com/reportportal/service-ui/releases/download/$UI_VERSION/ui.tar.gz && \
 mkdir public && \
 tar -zxvf ui.tar.gz -C public && rm -f ui.tar.gz
 ```
